After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783998 - network: Fix critical when veth1 has no UUID
network: Fix critical when veth1 has no UUID
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-20 13:21 UTC by Bastien Nocera
Modified: 2017-06-21 11:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
network: Fix critical when veth1 has no UUID (1.52 KB, patch)
2017-06-20 13:21 UTC, Bastien Nocera
rejected Details | Review
network: Simplify the ignored Network interface types (2.12 KB, patch)
2017-06-20 13:42 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-06-20 13:21:09 UTC
For gnome-3-22
Comment 1 Bastien Nocera 2017-06-20 13:21:13 UTC
Created attachment 354099 [details] [review]
network: Fix critical when veth1 has no UUID

See https://bugzilla.redhat.com/show_bug.cgi?id=1457691

sudo ip link add veth0 type veth peer name veth1
sudo ip link set dev veth0 up
sudo ip link set dev veth1 up
nmcli device set veth1 managed yes
nmcli device set veth0 managed yes
nmcli connection add type ethernet ifname veth0 con-name ethie

Clicking the gear button for "veth1" throws a critical:
(gnome-control-center:31072): libnm-CRITICAL **: ((libnm-core/nm-connection.c:1815)): assertion '<dropped>' failed

Change it to throw a warning instead.
Comment 2 Bastien Nocera 2017-06-20 13:42:25 UTC
Created attachment 354101 [details] [review]
network: Simplify the ignored Network interface types

We might want to add more ignored types later on, but this is a simple
cleanup.
Comment 3 Bastien Nocera 2017-06-20 13:43:50 UTC
Comment on attachment 354099 [details] [review]
network: Fix critical when veth1 has no UUID

We can't throw a warning if we don't show the interface.
Comment 4 Bastien Nocera 2017-06-21 11:27:50 UTC
Attachment 354101 [details] pushed as 11c81f1 - network: Simplify the ignored Network interface types